--- a/src/styles/userAuthModal/AuthFormsShared.module.css
+++ b/src/styles/userAuthModal/AuthFormsShared.module.css
@@ -22,7 +22,7 @@
   height: 10px;
   width: 12px;
   content: "";
-  background-image: url(../assets/img/input_valid_check.svg);
+  background-image: url(../../assets/img/input_valid_check.svg);
   transition: all 200ms ease-in-out;
   transform: translateX(5px);
   opacity: 0;
