--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,6 +17,7 @@ h4,
 h5,
 h6 {
   font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
 }
 
 h1 {
@@ -45,6 +46,10 @@ button {
   justify-content: center;
   cursor: pointer;
   outline: none;
+}
+
+button svg {
+  font-size: 20px;
 }
 
 input,
