--- a/src/styles/header/Header.module.css
+++ b/src/styles/header/Header.module.css
@@ -1,4 +1,5 @@
 .root {
+  background-color: var(--color-background-one);
   padding: 0 20px;
   display: flex;
   justify-content: space-between;
@@ -125,7 +126,7 @@
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid transparent;
-  color: var(--color-font-one);
+  color: var(--color-button-one);
 }
 .themeBtn:hover {
   border-color: var(--color-border-one);
