Add minor style fixes

--- a/src/styles/userProfile/UserProfileNav.module.css
+++ b/src/styles/userProfile/UserProfileNav.module.css
@@ -27,7 +27,7 @@
 }
 
 @media (max-width: 550px) {
-  .userProfileNav {
+  .root {
     justify-content: unset;
     overflow: auto;
     padding: 0 8px;
