--- a/src/styles/userProfile/UserInfo.module.css
+++ b/src/styles/userProfile/UserInfo.module.css
@@ -64,12 +64,14 @@
 }
 
 .userDisplayName {
+  word-wrap: break-word;
   margin-top: 24px;
   text-align: center;
   font-size: 22px;
 }
 
 .username {
+  word-wrap: break-word;
   font-size: 12px;
   font-weight: 500;
   text-align: center;
@@ -78,6 +80,7 @@
 }
 
 .about {
+  word-wrap: break-word;
   margin: 8px 0;
   text-align: center;
 }
