--- a/src/styles/comments/LoadingComments.module.css
+++ b/src/styles/comments/LoadingComments.module.css
@@ -13,12 +13,12 @@
   height: 20px;
   width: 30%;
   margin-bottom: 4px;
-  animation: skeleton-pulse 1s ease-in-out infinite alternate;
+  animation: var(--skeleton-animation);
 }
 
 .commentBody {
   height: 25px;
-  animation: skeleton-pulse 1s ease-in-out infinite alternate;
+  animation: var(--skeleton-animation);
 }
 
 .interactionsContainer {
@@ -35,24 +35,12 @@
   height: 20px;
   width: 20px;
   margin: 0 4px;
-  animation: skeleton-pulse 1s ease-in-out infinite alternate;
+  animation: var(--skeleton-animation);
 }
 
 .interactions {
   height: 20px;
   width: 20%;
   margin-left: 4px;
-  animation: skeleton-pulse 1s ease-in-out infinite alternate;
-}
-
-@keyframes skeleton-pulse {
-  0% {
-    background-color: var(--color-loading-skeleton-initial);
-  }
-  50% {
-    background-color: var(--color-loading-skeleton-final);
-  }
-  100% {
-    background-color: var(--color-loading-skeleton-initial);
-  }
+  animation: var(--skeleton-animation);
 }
