--- a/src/styles/Communities/CommunityHeader.module.css
+++ b/src/styles/Communities/CommunityHeader.module.css
@@ -3,12 +3,11 @@
   height: 208px;
   width: 100%;
   object-fit: cover;
-  background-color: #999;
 }
 
 .infoWrapper {
   width: 100%;
-  background-color: white;
+  background-color: var(--color-background-one);
   padding-bottom: 12px;
 }
 
@@ -22,7 +21,7 @@
 
 .infoContainer img {
   border-radius: 100%;
-  border: 4px solid #fff;
+  border: 4px solid var(--color-background-one);
   display: inline-block;
   height: 72px;
   width: 72px;
@@ -48,7 +47,7 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 18px;
-  color: grey;
+  color: var(--color-utility-two);
 }
 
 .notificationBtn {
