--- a/src/styles/comments/PostComments.module.css
+++ b/src/styles/comments/PostComments.module.css
@@ -1,48 +1,42 @@
-.root {
+.commentContainer {
   margin: 16px 16px 0 10px;
   padding-right: 16px;
   padding-bottom: 16px;
 }
 
-.commentTextArea {
-  border: 1px solid var(--color-border-one);
-  border-radius: 4px;
-  margin: 24px 40px 24px 48px;
-  overflow: hidden;
+.noCommentsContainer {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 340px;
 }
-.commentTextArea:focus-within {
-  border: 1px solid var(--color-font-one);
+.noCommentsContainer svg {
+  fill: var(--color-link-one);
+  opacity: 0.45;
+  height: 28px;
+  width: 28px;
+  margin-bottom: 8px;
 }
 
-.commentTextArea textarea {
-  min-height: 122px;
-  overflow: hidden auto;
-  padding: 8px 16px;
-  resize: vertical;
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  border: none;
-  overflow-wrap: break-word;
-  font-family: "Noto Sans";
+.noCommentsContainer p {
+  font-size: 18px;
+  font-weight: 500;
+  color: var(--color-utility-two);
+  opacity: 0.6;
+  font-family: "IBM Plex Sans", sans-serif;
+}
+
+.noCommentsContainer p:last-child {
   font-size: 14px;
-  outline: none;
 }
 
-.commentTextArea > div {
-  background-color: var(--color-input-one);
-  padding: 4px 8px;
-}
+@media (max-width: 550px) {
+  .commentTextArea {
+    margin: 24px 12px 24px 12px;
+  }
 
-.commentTextArea button {
-  display: block;
-  margin-left: auto;
-  font-size: 12px;
-  width: fit-content;
-  min-height: auto;
-  padding: 4px 20px;
-}
-.commentTextArea button:disabled {
-  cursor: not-allowed;
-  filter: grayscale(1);
+  .commentContainer {
+    padding-right: unset;
+  }
 }
