Add improvements on displaying single post for smaller screen sizes

--- a/src/styles/posts/PostDisplay.module.css
+++ b/src/styles/posts/PostDisplay.module.css
@@ -131,6 +131,8 @@
   mask-image: none;
   max-height: fit-content;
   padding-right: 16px;
+  font-size: 14px;
+  font-family: "Noto Sans", sans-serif;
 }
 
 .postImg {
