--- a/src/styles/comments/CommentDisplay.module.css
+++ b/src/styles/comments/CommentDisplay.module.css
@@ -48,6 +48,15 @@
   border-radius: 50%;
 }
 
+.deletedInfo {
+  margin-top: 10px;
+  min-height: 18px;
+  margin-bottom: 6px;
+  font-size: 12px;
+  color: var(--color-utility-one);
+  margin-left: 8px;
+}
+
 .commentContainer {
   margin-left: 8px;
 }
@@ -150,6 +159,15 @@
   pointer-events: none;
   word-break: normal;
   font-family: "IBM Plex Sans", sans-serif;
+}
+
+.interactionsContainer .deleteBtn {
+  height: unset;
+}
+.interactionsContainer .deleteBtn:hover {
+  text-decoration: underline;
+  color: var(--color-font-one);
+  background-color: transparent;
 }
 
 .loadingSpinner {
