--- a/src/styles/header/Header.module.css
+++ b/src/styles/header/Header.module.css
@@ -5,6 +5,9 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid var(--color-border-one);
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .leftSide {
@@ -152,6 +155,7 @@
   background-color: transparent;
   font-size: 20px;
   color: var(--color-font-one);
+  position: relative;
 }
 .userInteractionBtns:hover,
 .userInteractionBtns:focus {
