--- a/src/styles/header/UserNav.module.css
+++ b/src/styles/header/UserNav.module.css
@@ -37,7 +37,7 @@
 .userMenu {
   position: fixed;
   right: 20px;
-  top: 51px;
+  top: 50px;
   width: 252px;
   background-color: var(--color-background-one);
   border: 1px solid var(--color-border-one);
@@ -45,6 +45,7 @@
   padding: 0.5rem 0;
   overflow-y: auto;
   max-height: 80%;
+  z-index: 1;
 }
 
 .sectionTitle {
