--- a/src/styles/header/Header.module.css
+++ b/src/styles/header/Header.module.css
@@ -41,40 +41,6 @@
   height: 18px;
 }
 
-.navBtn {
-  width: 270px;
-  height: 36px;
-  font-weight: normal;
-  background-color: transparent;
-  border: 1px solid transparent;
-  outline: none;
-  border-radius: 4px;
-}
-.navBtn:hover {
-  border-color: var(--color-border-one);
-}
-
-.currentLocationImg {
-  color: var(--color-font-one);
-  padding: 0 0.5rem;
-  font-size: 20px;
-  height: 20px;
-  max-height: 20px;
-  max-width: 20px;
-  width: 20px;
-}
-
-.currentLocationInfo {
-  text-align: start;
-  flex-grow: 1;
-}
-
-.caretDown {
-  font-size: 20px;
-  padding: 0 0.5rem;
-  color: var(--color-utility-one);
-}
-
 .themeBtn {
   font-size: 20px;
   padding: 5px;
@@ -122,21 +88,9 @@
   .logoText {
     display: none;
   }
-
-  .currentLocationInfo {
-    display: none;
-  }
-
-  .navBtn {
-    width: unset;
-  }
 }
 
 @media (max-width: 650px) {
-  .caretDown {
-    display: none;
-  }
-
   .leftSide {
     gap: 1rem;
   }
@@ -147,7 +101,7 @@
 }
 
 @media (max-width: 420px) {
-  .navBtn {
-    display: none;
+  .leftSide {
+    gap: unset;
   }
 }
