--- a/src/styles/comments/CommentDisplay.module.css
+++ b/src/styles/comments/CommentDisplay.module.css
@@ -161,13 +161,11 @@
   font-family: "IBM Plex Sans", sans-serif;
 }
 
-.interactionsContainer .deleteBtn {
-  height: unset;
-}
-.interactionsContainer .deleteBtn:hover {
-  text-decoration: underline;
-  color: var(--color-font-one);
-  background-color: transparent;
+.deletingSpinner {
+  margin-left: 8px;
+  font-size: 20px;
+  color: var(--color-button-one);
+  animation: var(--spinner-animation);
 }
 
 .loadingSpinner {
