Add style improvements and corrections

--- a/src/styles/Communities/CommunityHeader.module.css
+++ b/src/styles/Communities/CommunityHeader.module.css
@@ -58,3 +58,9 @@
   background-color: transparent;
   color: var(--color-button-one);
 }
+
+@media (max-width: 1020px) {
+  .infoContainer {
+    max-width: 640px;
+  }
+}
