--- a/src/styles/posts/PostDisplay.module.css
+++ b/src/styles/posts/PostDisplay.module.css
@@ -111,6 +111,7 @@
   vertical-align: middle;
   width: 20px;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .subName {
@@ -181,16 +182,16 @@
   bottom: 36px;
   left: 50%;
   transform: translateX(-50%);
+  z-index: 1;
 }
 
 .postDeletedAnnounce {
-  background-color: white;
+  background-color: var(--color-background-one);
   padding: 1rem 3rem;
   border-radius: 4px;
   font-weight: 600;
   text-align: center;
   width: max-content;
-  z-index: 1;
   border: 1px solid var(--color-utility-one);
   box-shadow: 0 0 3px var(--color-utility-one);
   animation: var(--announce-animation);
